--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,10 +20,10 @@ exclude = [
 default-features = false
 version = "1"
 
-[dependencies.block-cipher]
-version = "0.8"
+[dependencies.cipher]
+version = "0.2"
 
-[dev-dependencies.block-cipher]
+[dev-dependencies.cipher]
 features = ["dev"]
-version = "0.8"
+version = "0.2"
 
